fix(styles): remove dark mode styles when enable-dark-mode is false

--- a/src/styles/mixins/color-modes.less
+++ b/src/styles/mixins/color-modes.less
@@ -1,5 +1,7 @@
 .dark-mode(@rules) {
-  .rs-theme-dark & {
-    @rules();
+  & when (@enable-dark-mode = true) {
+    .rs-theme-dark & {
+      @rules();
+    }
   }
 }
